                }
            }
            printf ",\"full_path\":\"%s\"", json_escape(prev_file)
            printf "}\n"
        }
        # Reset map state for next file
        delete map_pair_count
        delete map_pairs_k
        delete map_pairs_v
    }
    END { if (prev_file) emit() }
    ' "$@"
}

cmd_create() {
    ensure_dir

    local title="" desc="" impact="" entry_type="default" author="" tags="" dirs=""
    local -a ap_pairs=() note_id_pairs=()

    # Default author to git user.name if available
    author=$(git config user.name 2>/dev/null || true)

    # Parse args
    while [[ $# -gt 0 ]]; do
        case "$1" in
            --impact)
                impact="$2"; shift 2 ;;
            -t|--type)
                entry_type="$2"; shift 2 ;;
            --desc)
                desc="$2"; shift 2 ;;
            -a|--author)
                author="$2"; shift 2 ;;
            --tags)
                tags="$2"; shift 2 ;;
            --dirs)
                dirs="$2"; shift 2 ;;
            --ap)
                [[ "$2" == *=* ]] || { echo "Error: --ap requires key=value format" >&2; return 1; }
                ap_pairs+=("$2"); shift 2 ;;
            --note-id)
                [[ "$2" == *=* ]] || { echo "Error: --note-id requires key=value format" >&2; return 1; }
                note_id_pairs+=("$2"); shift 2 ;;
            -*)
                echo "Unknown option: $1" >&2; return 1 ;;
            *)
                title="$1"; shift ;;
        esac
    done

    # Validation: impact is required
    if [[ -z "$impact" ]]; then
        echo "Error: --impact is required (1-5)" >&2
        return 1
    fi

    # Validation: impact must be 1-5
    if ! [[ "$impact" =~ ^[1-5]$ ]]; then
        echo "Error: --impact must be 1-5, got '$impact'" >&2
        return 1
    fi

    # Validation: type must be in allowed list
    local valid_type=0
    for vt in $VALID_TYPES; do
        [[ "$entry_type" == "$vt" ]] && valid_type=1
    done