@@ -256,7 +256,7 @@ _file_to_jsonl() {
 cmd_create() {
     ensure_dir
 
-    local title="" desc="" impact="" entry_type="default" author="" tags="" dirs=""
+    local title="" desc="" impact="" entry_type="default" author="" tags="" dirs="" details=""
     local -a ap_pairs=() note_id_pairs=()
 
     # Default author to git user.name if available
@@ -283,6 +283,8 @@ cmd_create() {
             --note-id)
                 [[ "$2" == *=* ]] || { echo "Error: --note-id requires key=value format" >&2; return 1; }
                 note_id_pairs+=("$2"); shift 2 ;;
+            --details_in_md)
+                details="$2"; shift 2 ;;
             -*)
                 echo "Unknown option: $1" >&2; return 1 ;;
             *)
@@ -366,6 +368,9 @@ cmd_create() {
         fi
         echo "---"
         echo ""
+        if [[ -n "$details" ]]; then
+            printf '%s\n' "$details"
+        fi
     } > "$file"
 
     _file_to_jsonl "$file"
@@ -502,7 +507,8 @@ Commands:
   create [title] [options]  Create changelog entry (prints JSON)
     --impact N              Impact level 1-5 (required)
     -t, --type TYPE         Type (feature|bug_fix|refactor|chore|breaking_change|docs|default) [default: default]
-    --desc TEXT             Description text
+    --desc TEXT             Short description (in query output)
+    --details_in_md TEXT    Markdown body (visible in show, NOT in query output)
     -a, --author NAME       Author [default: git user.name]
     --tags TAG,TAG,...      Comma-separated tags
     --dirs DIR,DIR,...      Comma-separated affected directories
@@ -519,7 +525,7 @@ Entries stored as markdown in ./.change_log/ (auto-created at git repo root)
 Override directory with CHANGE_LOG_DIR env var
 
 - BEFORE_STARTING: query for recent changes to gather the context of recent relevant changes that were made.
-- AFTER_COMPLETION_OF_ITEM: Add change log entry for the completed item with clear title. Concise description and more detailed explanation within the markdown.
+- AFTER_COMPLETION_OF_ITEM: Add change log entry with clear title, concise --desc, and use --details_in_md for longer explanations.
 EOF
 }
 
